# Testrig

./: git_save.sh
FiFo/fifo/: Makefile  compile_commands.json  fifo.workspace
Interface/: BITCODES.txt  God.err  Main.db  Main.db-shm  Main.db-wal  Startredis  Stopredis  aron  config  email  project1.lpi  project1.lpr  project1.lps  rd_commands.pas  test.py  unit1.pas  unit2.lfm  unit2.pas  unit3.pas
Interface/Programs/: 54  55  56  57
Interface/backup/: project1.lpi.bak  project1.lps.bak  unit1.lfm.bak  unit1.pas.bak  unit3.pas.bak
Interface/redis monitor/: Redis_monitor.lpr  Redis_monitor.lps  unit1.pas
LIBS/: Core.c  Core.h  Helpers.c  Helpers.h  redis_helper.c  redis_helper.h
Rig project/: CMakeLists.txt  Makefile  Rig project.workspace  compile_commands.json
Rig project/.codelite/: Rig project.session  Rig project.tags  Rig project.workspace.aron_jones  compilation.db  cppcheck.list  refactoring.db  subversion.conf  valgrind.memcheck.log.xml
Rig project/Controller/: CMakeLists.txt  Controller.mk  Controller.project  Controller.txt  Plan  main.c
Rig project/Controller/Debug/: 50  Controller  Core.c.o.d  LIBS_Core.c.o.d  LIBS_Helpers.c.o.d  LIBS_redis_helper.c.o.d  libss_ABE_IoPi.c.o.d  main.c.o.d  runum.sh
Rig project/Controller/Debug/Programs/: 18  24
Rig project/God/: CMakeLists.txt  God.mk  God.project  God.txt  main.c
Rig project/God/Debug/: Core.c.o.d  God  God.err  Helpers.c.o.d  main.c.o.d  redis_helper.c.o.d
Rig project/libss/: ABE_IoPi.c  ABE_IoPi.h
Test_structure/Main/: Controller  DEC  God  God.err  INTERFACE  Main.db  config  (+2 more)
(+111 files in other folders)
